--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,10 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.0",
     "@tanstack/react-query": "^5.90.3",
+    "@tiptap/extension-placeholder": "^3.13.0",
+    "@tiptap/pm": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.106",
     "class-variance-authority": "^0.7.1",
